--- a/elements/inbox-item.html
+++ b/elements/inbox-item.html
@@ -1,13 +1,19 @@
 <link rel="import" href="/bower_components/polymer/polymer-element.html">
 
+<link rel="import" href="/bower_components/polymer/src/templatizer/dom-if.html">
 
 <dom-module id="inbox-item">
     <template>
         <style>
+
+            * {
+                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            }
+
             .message {
                 display: flex;
+                /*flex:0 0 100%;*/
                 margin: 8px 0;
-                width: 320px;
             }
 
             .message:hover {
@@ -26,9 +32,7 @@
             .summary {
                 flex-grow: 1;
                 min-width: 0;
-
             }
-
 
             .summary h2 {
                 margin: 0;
@@ -40,26 +44,34 @@
             .summary p {
                 margin: 0;
             }
+
             .new {
                 align-self: center;
-                background:lightskyblue;
-                padding:5px;
+                background: lightskyblue;
+                padding: 5px;
                 border-radius: 20px;
                 color: white;
-                margin-right:8px;
-
+                margin-right: 8px;
+                font-size: 0.6rem;
             }
 
         </style>
 
-        <div class="message">
+        <div class="message" on-click="openMessage">
             <div class="avatar"></div>
             <div class="summary">
 
-                <h2>[[item.subject]]</h2>
+                <h2>[[item.id]][[item.subject]]</h2>
                 <p>[[item.body]]</p>
             </div>
+            <dom-if if="[[!item.read]]">
+                <template>
+
             <span class="new">new</span>
+
+                </template>
+
+            </dom-if>
 
         </div>
     </template>
@@ -79,6 +91,12 @@
                     }
                 }
             }
+
+            openMessage(e){
+                this.dispatchEvent(new CustomEvent('select-message', {detail: {id:this.item.id}}), {bubbles: true})
+
+            }
+
         }
         customElements.define(inboxItem.is, inboxItem);
 
