Added some comments, and cleaned up.

--- a/src/elements/app-container.html
+++ b/src/elements/app-container.html
@@ -23,10 +23,14 @@
 
       ready() {
         super.ready();
+
+        //Subcribe to the loading state
         this.unsubscribe = store.subscribe(() => {
             this.loading = store.getState().inboxReducer.loading;
           }
         );
+
+        //Fetch the messages
         inboxActions.fetchMessages();
 
       }
