--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <script src="/bower_components/redux/index.js"></script>
   <script src="/bower_components/redux-thunk/index.js"></script>
+  <script src="/src/middleware/logger.js"></script>
   <script src="/bower_components/lodash/dist/lodash.js"></script>
   <script src="/src/reducers/inboxReducer.js"></script>
   <script src="/src/actions/inboxActions.js"></script>
